src/components/TaskList/TaskList.module.scss
.taskList {
  display: flex;
  flex-direction: column;
  row-gap: 20px;
  width: 48.5%;
  padding: 15px;
  border-radius: 10px;
}

.active {
  background-color: rgba(2, 93, 146, 0.6);
}

.completed {
  background-color: rgba(18, 153, 58, 0.6);
}

.title {
  font-size: 28px;
  text-align: center;
  color: var(--theme-text-header);
}

.taskItems {
  display: flex;
  flex-direction: column;
  row-gap: 10px;
}

.noTasks {
  font-weight: 700;
  letter-spacing: 0.5px;
  font-size: 16px;
  text-align: center;
}

@media (max-width: $tablet) {
  .title {
    font-size: 24px;
  }

  .noTasks {
    font-size: 14px;
  }
}

@media (max-width: $mobile) {
  .taskList {
    width: 100%;
  }
}

@media (max-width: $mobileSmall) {
  .taskList {
    padding: 15px 10px;
  }
}

